-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.5.1, dev
-
None
-
-
4f607ebfc (dev), b3822c93c (6.5)
Yocto build fails for meta-qt6 layer in qtwayland module with error:
agent:2023/04/12 13:10:56 build.go:402: | /home/qt/work/build/build/tmp/work/core2-32-poky-linux/qtwayland/6.6.0-r0/git/src/client/qwaylandvulkanwindow.cpp: In member function 'virtual void QtWaylandClient::QWaylandVulkanWindow::invalidateSurface()': agent:2023/04/12 13:10:56 build.go:402: | /home/qt/work/build/build/tmp/work/core2-32-poky-linux/qtwayland/6.6.0-r0/git/src/client/qwaylandvulkanwindow.cpp:32:17: error: cannot convert 'std::nullptr_t' to 'VkSurfaceKHR' {aka 'long long unsigned int'} in assignment agent:2023/04/12 13:10:56 build.go:402: | 32 | m_surface = nullptr; agent:2023/04/12 13:10:56 build.go:402: | | ^~~~~~~
Seems to be caused by wayland commit "d78e8c02846a3634445a808d9845be8613bb1bfe Client: Cleanup vulkan surfaces on hide"
| For Gerrit Dashboard: QTBUG-112808 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 471959,2 | Client: Use correct type in vulkan window for null | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 472019,2 | Client: Use correct type in vulkan window for null | 6.5 | qt/qtwayland | Status: MERGED | +2 | 0 |