Client: Use correct type in vulkan window for null

VkSurfaceKHR is not a pointer, nullptr is not always the same size.

Pick-to: 6.5
Task-number: QTBUG-112808
Change-Id: I12e5f61b67b9aa331f7e42a952413e922d09eb8d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>